--- a/Shop/catalogue-page/app/css/all.css
+++ b/Shop/catalogue-page/app/css/all.css
@@ -10218,8 +10218,7 @@ i {
     display: block; } }
 
 .content_inform .title {
-  margin-bottom: 4px;
-  text-align: center; }
+  margin-bottom: 4px; }
 
 .content_inform .row {
   margin-bottom: 8px; }
@@ -10249,3 +10248,13 @@ i {
     text-decoration: none; }
   .content_inform a:hover span {
     text-decoration: underline; } }
+
+@media screen and (max-width: 568px) {
+  .content_inform .title {
+    text-align: center; } }
+
+@media screen and (max-width: 1025px) {
+  .slider_watched .bottom {
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0); } }
