--- a/Shop/catalogue-page/app/scss/filter.scss
+++ b/Shop/catalogue-page/app/scss/filter.scss
@@ -20,6 +20,36 @@
     background: #fff;
     position: relative;
     z-index: 3;
+    .found_amount {
+    	position: absolute;
+    	right: 0;
+    	display: none;
+    	transform: translate(100%, -25%);
+    	padding: 6px 12px;
+    	background: rgba(0, 0, 0, 0.8);
+    	border-radius: 4px;
+    	.b-found__quantity-phrase {
+    		border: none;
+    		background-color: #ffcc33;
+    		transition: .3s ease;
+    		padding: 6px 12px;
+    		border-radius: 4px;
+    		cursor: pointer;
+    		white-space: nowrap;
+    		&:hover {
+    			background-color: #ffdd7d;
+    		}
+    	} 
+    	&::after {
+    		content: '';
+    		position: absolute;
+    		border: 4px solid transparent;	
+    		border-right: 4px solid rgba(0, 0, 0, 0.8);
+    		left: -8px;
+    		top: 50%;
+    		transform: translateY(-50%);
+    	}
+    }
     .section {
         border-bottom: 1px solid #e5e5e5;
         transition: .3s;
@@ -30,7 +60,7 @@
             cursor: pointer;
             position: relative;
             padding: 13px 22px;
-            padding-left: 40px;
+            padding-left: 43px;
             .open_button {
             	position: absolute;
             	width: 100%;
@@ -59,7 +89,7 @@
                     display: block;
                     transform: rotate(90deg);
                     position: absolute;
-                    left: 20px;
+                    left: 25px;
                     height: 14px;
                     transition: .3s;
                     top: 17px;
@@ -166,6 +196,12 @@
             padding: 20px;
             padding-top: 0;
             padding-bottom: 14px;
+            .stub {
+            	display: block;
+            }
+            .ser {
+            	display: none;
+            }
             .param_list,
             .drop_down_list {
                 li {
@@ -305,8 +341,22 @@
                 margin-bottom: 6px;
                 margin-top: 3px;
                 color: #818181;
+                transition: .3s;
             }
         }
+    }
+    .series {
+    	.tab_content .param_list {
+    	  	 display: none;
+    	  }
+    }
+    .section_stab {
+    	  .tab_content .stub {
+    	  	display: none;
+    	  }
+    	  .tab_content .param_list {
+    	  	 display: block;
+    	  }
     }
     .range {
         .extra-controls {
@@ -388,5 +438,45 @@
     }
     .filter_show_btn {
     	display: block;
+    }
+    .filter .section .tab_title .button_container .description {
+    	 opacity: 0.7 !important;
+    }
+    .filter .found_amount {
+    	display: none !important;
+    }
+    .filter .section .tab_content .param_list .checkbox label::before, .filter .section .tab_content .drop_down_list .checkbox label::before {
+    	  width: 30px;
+    	  height: 30px;
+    }
+    .filter .section .tab_content .param_list .checkbox label, .filter .section .tab_content .drop_down_list .checkbox label {
+    	  min-height: 30px;
+    	  padding-left: 38px;
+    	  padding-top: 7px;
+    }
+    .filter .section .tab_content .param_list .checkbox label::after, .filter .section .tab_content .drop_down_list .checkbox label::after {
+    	  height: 10px;
+    	  width: 25px;
+    	  top: 5px;
+    	  left: 7px;
+    }
+    .filter .section .tab_content .param_more {
+    	  padding: 10px 0;
+    }
+    .filter .section .tab_title .arrow {
+    	  left: 32px;
+    }
+    .filter .section .tab_title {
+    	  padding-left: 50px;
+    }
+    .filter .section .tab_title .button_container .description i {
+    	  font-size: 1.7em;
+    }
+    .filter .section .tab_title .button_container .description {
+    	 right: -28px;
+    	 bottom: -5px;
+    }
+    .filter .section .tab_content .param_list li, .filter .section .tab_content .drop_down_list li {
+    	  margin-bottom: 10px;
     }
 }
