--- a/Shop/catalogue-page/app/scss/catalog.scss
+++ b/Shop/catalogue-page/app/scss/catalog.scss
@@ -854,7 +854,7 @@ ul {
         padding: 0 10px;
     }
     p {
-            font-size: 12px;
+            font: 14px/1.3 "PT Sans", sans-serif;
             line-height: 150%;
             color: #1e0602;
         }
