--- a/Shop/catalogue-page/app/scss/catalog.scss
+++ b/Shop/catalogue-page/app/scss/catalog.scss
@@ -850,6 +850,13 @@ ul {
 
 .block_more_info {
     display: none;
+    font: 14px/1.3 "PT Sans", sans-serif;
+    .button_more span {
+        font: 14px/1.3 "PT Sans", sans-serif;
+        font-size: 14px !important;
+    }
+    .button_more {
+        padding: 12px;    }
     .category_list {
         padding: 0 10px;
     }
