--- a/Shop/catalogue-page/app/css/filter.css
+++ b/Shop/catalogue-page/app/css/filter.css
@@ -308,9 +308,6 @@
       .filter .section .tab_content .drop_down_list {
         display: none; }
       .filter .section .tab_content .param_more {
-        border: 1px solid #cdcdcd;
-        -webkit-border-radius: 3px;
-                border-radius: 3px;
         padding: 5px 0px;
         cursor: pointer;
         width: 110px;
@@ -318,7 +315,6 @@
         white-space: nowrap;
         margin-bottom: 6px;
         margin-top: 3px;
-        color: #818181;
         -webkit-transition: .3s;
         -o-transition: .3s;
         transition: .3s; }
@@ -369,11 +365,7 @@
           -ms-flex-pack: center;
               justify-content: center;
       width: 100%;
-      border: 1px solid #e5e5e5;
-      color: #818181;
       height: 38px;
-      -webkit-border-radius: 4px;
-              border-radius: 4px;
       font: 14px/1.3 "PT Sans", sans-serif;
       font-size: 1.1em;
       cursor: pointer;
@@ -392,16 +384,9 @@
     .filter .section_buttons .reset {
       margin-top: 10px; }
 
-@media screen and (min-width: 992px) {
-  .filter .section .tab_content .param_more:hover {
-    color: #1d1d1d;
-    border-color: #999999; }
+@media screen and (min-width: 1025px) {
   .filter .section_buttons .show_results:hover {
-    background-color: #ffdd7d; }
-  .filter .section_buttons .all_filters:hover,
-  .filter .section_buttons .reset:hover {
-    color: #1d1d1d;
-    border-color: #999999; } }
+    background-color: #ffdd7d; } }
 
 @media screen and (max-width: 992px) {
   .filter .section .tab_content .color_list {
