--- a/portfolio/rofl/app/css/main.css
+++ b/portfolio/rofl/app/css/main.css
@@ -2597,30 +2597,61 @@
 html, body {
   height: 100%;
   width: 100%;
-  position: fixed;
-  -webkit-transition: .5s;
-  -o-transition: .5s;
-  transition: .5s; }
+  overflow: hidden; }
 
 p {
-  position: absolute;
-  display: inline-block;
   text-align: center;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+  padding: 0 2px;
+  opacity: 0; }
+
+.active {
+  opacity: 1; }
+
+.post {
+  position: fixed;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  -webkit-transition: 1s;
-  -o-transition: 1s;
-  transition: 1s;
-  opacity: 0; }
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  opacity: 0;
+  -webkit-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
 
 .game_over {
-  background-color: red; }
-  .game_over p {
-    opacity: 1;
-    color: #fff; }
+  opacity: 1; }
+
+.end {
+  height: 100px;
+  width: 100px;
+  -webkit-border-radius: 100%;
+          border-radius: 100%; }
+  .end p {
+    -webkit-transform: scale(0);
+        -ms-transform: scale(0);
+            transform: scale(0); }
+
+p {
+  color: #fff; }
 
 a {
   display: block;
