--- a/portfolio/rofl/app/scss/main.scss
+++ b/portfolio/rofl/app/scss/main.scss
@@ -3629,27 +3629,45 @@
 html, body {
 	height: 100%;
 	width: 100%;
-	position: fixed;
-	transition: .5s;
+	overflow: hidden;
 }
 
 p {
-	position: absolute;
-	display: inline-block;
 	text-align: center;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
   transition: 1s;
+  padding: 0 2px;
   opacity: 0;
 }
-
+.active {
+    opacity: 1;
+}
+.post {
+   position: fixed;
+   left: 50%;
+   top: 50%;
+   transform: translate(-50%, -50%);
+   width: 100%;
+   height: 100%;
+   background-color: red;
+   opacity: 0;
+   transition: .5s;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
 .game_over {
-	 background-color: red;
-	 p {
-	 	  opacity: 1;
-	 	  color: #fff;
-	 }
+	 opacity: 1;
+}
+.end {
+	height: 100px;
+	width: 100px;
+	border-radius: 100%;
+  p {
+  	 transform: scale(0);
+  }
+}
+p {
+	color: #fff;
 }
 
 a {
