--- a/portfolio/Barbershop/app/scss/dop.scss
+++ b/portfolio/Barbershop/app/scss/dop.scss
@@ -123,27 +123,35 @@
                                 height: 23.8em;
                             }
                             .top1 {
-                                background: url(../img/center1.jpg) no-repeat;
+                                background: url(../img/center1.jpg) no-repeat center center;
                                 background-size: cover;
                             }
                             .top2 {
-                                background: url(../img/center2.jpg) no-repeat;
+                                background: url(../img/center2.jpg) no-repeat center center;
                                 background-size: cover;
                             }
                             .top3 {
-                                background: url(../img/center3.jpg) no-repeat;
+                                background: url(../img/center3.jpg) no-repeat center center;
                                 background-size: cover;
                             }
                             .top4 {
-                                background: url(../img/center4.jpg) no-repeat;
+                                background: url(../img/center4.jpg) no-repeat center center;
                                 background-size: cover;
                             }
                             .top5 {
-                                background: url(../img/center5.jpg) no-repeat;
+                                background: url(../img/center5.jpg) no-repeat center center;
                                 background-size: cover;
                             }
                             .top6 {
-                                background: url(../img/center6.jpg) no-repeat;
+                                background: url(../img/center6.jpg) no-repeat center center;
+                                background-size: cover;
+                            }
+                            .top7 {
+                                background: url(../img/prev7.jpg) no-repeat center center;
+                                background-size: cover;
+                            }
+                            .top8 {
+                                background: url(../img/prev8.jpg) no-repeat center center;
                                 background-size: cover;
                             }
                             p {
