--- a/Shop/catalogue-page/app/css/filter.css
+++ b/Shop/catalogue-page/app/css/filter.css
@@ -16,51 +16,56 @@
   transition: .3s;
   display: none; }
 
+.range-slider {
+  display: block; }
+
+.found_amount {
+  position: absolute;
+  z-index: 5;
+  display: none;
+  padding: 6px 12px;
+  -webkit-transform: translateY(-25%);
+      -ms-transform: translateY(-25%);
+          transform: translateY(-25%);
+  background: rgba(0, 0, 0, 0.8);
+  -webkit-border-radius: 4px;
+          border-radius: 4px; }
+  .found_amount .b-found__quantity-phrase {
+    border: none;
+    background-color: #ffcc33;
+    -webkit-transition: .3s ease;
+    -o-transition: .3s ease;
+    transition: .3s ease;
+    padding: 6px 12px;
+    -webkit-border-radius: 4px;
+            border-radius: 4px;
+    cursor: pointer;
+    white-space: nowrap; }
+    .found_amount .b-found__quantity-phrase:hover {
+      background-color: #ffdd7d; }
+  .found_amount::after {
+    content: '';
+    position: absolute;
+    border: 4px solid transparent;
+    border-right: 4px solid rgba(0, 0, 0, 0.8);
+    left: -8px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%); }
+
 .filter {
   border: 1px solid #e5e5e5;
   width: 100%;
   background: #fff;
   position: relative;
   z-index: 3; }
-  .filter .found_amount {
-    position: absolute;
-    right: 0;
-    display: none;
-    -webkit-transform: translate(100%, -25%);
-        -ms-transform: translate(100%, -25%);
-            transform: translate(100%, -25%);
-    padding: 6px 12px;
-    background: rgba(0, 0, 0, 0.8);
-    -webkit-border-radius: 4px;
-            border-radius: 4px; }
-    .filter .found_amount .b-found__quantity-phrase {
-      border: none;
-      background-color: #ffcc33;
-      -webkit-transition: .3s ease;
-      -o-transition: .3s ease;
-      transition: .3s ease;
-      padding: 6px 12px;
-      -webkit-border-radius: 4px;
-              border-radius: 4px;
-      cursor: pointer;
-      white-space: nowrap; }
-      .filter .found_amount .b-found__quantity-phrase:hover {
-        background-color: #ffdd7d; }
-    .filter .found_amount::after {
-      content: '';
-      position: absolute;
-      border: 4px solid transparent;
-      border-right: 4px solid rgba(0, 0, 0, 0.8);
-      left: -8px;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-          -ms-transform: translateY(-50%);
-              transform: translateY(-50%); }
   .filter .section {
     border-bottom: 1px solid #e5e5e5;
     -webkit-transition: .3s;
     -o-transition: .3s;
-    transition: .3s; }
+    transition: .3s;
+    min-height: 48px; }
     .filter .section:hover {
       background-color: #fafafa; }
     .filter .section .tab_title {
@@ -111,10 +116,10 @@
           color: #afafaf; }
       .filter .section .tab_title .item {
         position: absolute;
-        right: 10px;
-        top: 10px;
-        width: 17px;
-        height: 17px;
+        width: 48px;
+        height: 48px;
+        right: 0;
+        top: 0;
         cursor: pointer;
         display: none;
         z-index: 2; }
@@ -122,8 +127,8 @@
           opacity: 0.8; }
       .filter .section .tab_title .reset {
         position: absolute;
-        width: 17px;
-        height: 17px;
+        height: 100%;
+        width: 100%;
         left: 0px;
         padding: 0;
         opacity: 0.3;
@@ -135,7 +140,7 @@
         z-index: 1;
         content: ' ';
         height: 20px;
-        top: 0;
+        top: 14px;
         width: 2px;
         background-color: #333;
         cursor: pointer; }
@@ -207,7 +212,7 @@
       .filter .section .tab_content .param_list .checkbox label,
       .filter .section .tab_content .drop_down_list .checkbox label {
         position: relative;
-        display: inline-block;
+        display: block;
         padding-left: 25px;
         cursor: pointer;
         color: #525252; }
@@ -347,48 +352,88 @@
       height: 28px;
       width: 43%;
       padding-left: 8px; }
-  .filter .section_buttons {
-    padding: 20px; }
-    .filter .section_buttons .show_results,
-    .filter .section_buttons .all_filters,
-    .filter .section_buttons .reset {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-          -ms-flex-align: center;
-              align-items: center;
-      -webkit-box-pack: center;
-      -webkit-justify-content: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-      width: 100%;
-      height: 38px;
-      font: 14px/1.3 "PT Sans", sans-serif;
-      font-size: 1.1em;
-      cursor: pointer;
-      -webkit-transition: .3s;
-      -o-transition: .3s;
-      transition: .3s; }
-      .filter .section_buttons .show_results .count,
-      .filter .section_buttons .all_filters .count,
-      .filter .section_buttons .reset .count {
-        padding: 0 0.2em; }
-    .filter .section_buttons .show_results {
-      margin-bottom: 10px;
-      border: none;
-      background-color: #ffcc33;
-      color: #000; }
-    .filter .section_buttons .reset {
-      margin-top: 10px; }
+
+.section_buttons {
+  padding: 20px; }
+  .section_buttons .show_results,
+  .section_buttons .all_filters,
+  .section_buttons .reset {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 100%;
+    height: 38px;
+    font: 14px/1.3 "PT Sans", sans-serif;
+    font-size: 1.1em;
+    cursor: pointer;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s; }
+    .section_buttons .show_results .count,
+    .section_buttons .all_filters .count,
+    .section_buttons .reset .count {
+      padding: 0 0.2em; }
+  .section_buttons .show_results {
+    margin-bottom: 10px;
+    border: none;
+    -webkit-border-radius: 4px;
+            border-radius: 4px;
+    background-color: #ffcc33;
+    color: #000; }
+  .section_buttons .reset {
+    margin-top: 10px; }
+
+.filter-page {
+  margin-bottom: 25px;
+  position: relative; }
+  .filter-page .filter-page-content {
+    border: 1px solid #e5e5e5;
+    background-color: #fff;
+    padding: 20px 10px 10px 10px;
+    padding-bottom: 15px;
+    margin: 0; }
+  .filter-page .filter {
+    border: none;
+    padding: 0 10px;
+    width: 50%;
+    position: relative;
+    z-index: 0; }
+  .filter-page .fil1 {
+    z-index: 2; }
+  .filter-page .fil2 {
+    z-index: 1; }
+  .filter-page .section_buttons {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 580px; }
+  .filter-page .filter_section {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    padding: 0; }
 
 @media screen and (min-width: 1025px) {
-  .filter .section_buttons .show_results:hover {
+  .section_buttons .show_results:hover {
     background-color: #ffdd7d; } }
 
 @media screen and (max-width: 992px) {
+  .filter-page .filter_section {
+    display: block; }
+  .filter-page .filter {
+    width: 100%; }
   .filter .section .tab_content .color_list {
     -webkit-box-pack: start;
     -webkit-justify-content: flex-start;
@@ -401,7 +446,7 @@
     display: block; }
   .filter .section .tab_title .button_container .description {
     opacity: 0.7 !important; }
-  .filter .found_amount {
+  .found_amount {
     display: none !important; }
   .filter .section .tab_content .param_list .checkbox label::before, .filter .section .tab_content .drop_down_list .checkbox label::before {
     width: 30px;
